--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,14 @@ test:
   <<: *default
   database: db/test.sqlite3
 
+# production:
+#   <<: *default
+#   database: db/production.sqlite3
+
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: mysql2
+  encoding: utf8mb4
+  database: iMovieStore
+  host: localhost
+  username: root
+  password: tipmysql1！
